[backups2datalad] 2 files added

--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -7,9 +7,21 @@ access:
 - schemaKey: AccessRequirements
   status: dandi:OpenAccess
 assetsSummary:
-  numberOfBytes: 0
-  numberOfFiles: 0
+  approach: []
+  dataStandard:
+  - identifier: RRID:SCR_015242
+    name: Neurodata Without Borders (NWB)
+    schemaKey: StandardsType
+  measurementTechnique: []
+  numberOfBytes: 2137420087
+  numberOfFiles: 2
+  numberOfSubjects: 2
   schemaKey: AssetsSummary
+  species:
+  - identifier: http://purl.obolibrary.org/obo/NCBITaxon_9913
+    name: Bos taurus - Cattle
+    schemaKey: SpeciesType
+  variableMeasured: []
 citation: Silkuniene, Giedre; Kim, Vitalii; Semenov, Iurii; Pakhomov, Andrei (2023)
   The difference in electroporation patterns produced by a train of single pulses
   and a train of paired pulses (Version draft) [Data set]. DANDI archive. https://dandiarchive.org/dandiset/000633/draft
@@ -48,6 +60,7 @@ contributor:
   - dcite:Funder
   schemaKey: Organization
 dateCreated: '2023-09-14T19:09:10.314783+00:00'
+datePublished: '2023-10-13T22:26:28.557920+00:00'
 description: The difference in electroporation patterns produced by a train of single
   pulses and a train of paired pulses. Supported by NIH 1R21EY034258
 ethicsApproval: []
@@ -61,12 +74,24 @@ manifestLocation:
 name: The difference in electroporation patterns produced by a train of single pulses
   and a train of paired pulses
 protocol: []
+publishedBy:
+  endDate: '2023-10-13T22:26:28.557920+00:00'
+  id: urn:uuid:d49e6896-d70a-49f6-ad89-eecd30f5d9ec
+  name: DANDI publish
+  schemaKey: PublishActivity
+  startDate: '2023-10-13T22:26:28.557920+00:00'
+  wasAssociatedWith:
+  - id: urn:uuid:33cc64d9-192e-48cd-9db1-456733c2d43e
+    identifier: RRID:SCR_017571
+    name: DANDI API
+    schemaKey: Software
+    version: 0.1.0
 relatedResource:
 - name: Control of the Electroporation Efficiency of Nanosecond Pulses by Swinging
     the Electric Field Vector Direction
   relation: dcite:IsPublishedIn
   schemaKey: Resource
-  url: https:// doi.org/10.3390/ijms241310921
+  url: https://doi.org/10.3390/ijms241310921
 repository: https://dandiarchive.org
 schemaKey: Dandiset
 schemaVersion: 0.6.4
